# DocumentLanguageModel

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.determinism/: lock.json
.github/workflows/: ci.yml  docs.yml  integration-slow.yml  release.yml  weekly-template-drift.yml
docs/: architecture.md  determinism.md  index.md  troubleshooting.md
docs-internal/: README-testing.md
docs/audits/: 13-brutal-promise-audit.md
docs/audits/13-followup/: PLAN.md  sway-results.json  sway-results.md  sway.yaml  the-doc.dlm
docs/cli/: reference.md
docs/cookbook/: adapter-provenance.md  audio-training.md  bootstrap-self-improving.md  choosing-a-base.md  coding-tutor.md  control-vectors.md  directive-cache.md  domain-kb.md  dora-vs-lora.md  interactive-session.md  learned-adapter-gate.md  lsp-helix.md  lsp-neovim.md  lsp-zed.md  metrics.md  multi-adapter.md  multi-source-training.md  multi-target-export.md  multimodal-training.md  preference-dpo-vs-orpo.md  probe-driven-training.md  quantization-tradeoffs.md  retrain-and-forget.md  reward-model-integration.md  self-improving-loop.md  sharing-with-pack.md  sharing.md  synthesize-training-data.md  tag-weighted-corpus.md  template-gallery.md  train-from-folder.md  training-across-codebases.md  watch-mode.md  writing-partner.md
docs/format/: dlm-ignore.md  dlm-training-yaml.md  export-manifest.md  frontmatter.md  instruction-section.md  preference-section.md  sections.md
docs/getting-started/: first-export.md  first-prompt.md  first-train.md  install.md
docs/hardware/: memory-estimates.md  rocm.md  vl-memory.md
scripts/: build-llama-cpp-rocm.sh  bump-llama-cpp.sh  check-no-sprint-references.sh  coverage-gates.sh  pregate.sh  refresh-chat-template-goldens.py  refresh-registry.py  regen-determinism-golden.py
src/dlm/: __init__.py  __main__.py  _pending.py
src/dlm/base_models/: __init__.py  _typed_shims.py  downloader.py  errors.py  license.py  probes.py  registry.py  registry_refresh.py  resolver.py  schema.py
src/dlm/cli/: __init__.py  app.py  commands.py  reporter.py  scaffold.py
src/dlm/control/: __init__.py  apply.py  errors.py  extract.py
src/dlm/data/: __init__.py  audio_cache.py  audio_collator.py  audio_preprocessor.py  audio_resample.py  dataset_builder.py  errors.py  formatter.py  instruction_parser.py  preference_parser.py  sections_to_rows.py  splitter.py  tokenizer_bringup.py  tokenizer_contract.py  vl_cache.py  vl_preprocessor.py  weighted_rows.py
src/dlm/directives/: __init__.py  cache.py  cache_key.py  defaults.py  discovery.py  errors.py  expand.py  ignore_parser.py  merge.py  safety.py  schema.py
src/dlm/doc/: __init__.py  errors.py  migrate.py  parser.py  schema.py  sections.py  serializer.py  versioned.py
src/dlm/eval/: __init__.py  early_stop.py  errors.py  mode_split.py  perplexity.py  probes.py  retention.py  summary.py  val_loss.py
src/dlm/export/: __init__.py  _gguf_io.py  adapter_gguf.py  arch_probe.py  audio_snapshot.py  base_gguf.py  dispatch.py  draft_registry.py  embedding_sync.py  entry.py  errors.py  gate_fallback.py  gguf_tensors.py  imatrix.py  manifest.py  merge.py  plan.py  precision_safety.py  preflight.py  quantize.py  record.py  runner.py  smoke.py  sway_json.py  tokenizer_sync.py  vendoring.py  vl_gguf.py  vl_snapshot.py  weighted_merge.py
src/dlm/hardware/: __init__.py  backend.py  capabilities.py  doctor.py  memory.py  plan.py  refusals.py  render.py
src/dlm/harvest/: __init__.py  applier.py  diff.py  errors.py  sway_reader.py
src/dlm/inference/: __init__.py  audio_generate.py  audio_loader.py  dispatch.py  errors.py  gate.py  generate.py  loader.py  mlx_adapter.py  plan.py  vl_generate.py  vl_loader.py
src/dlm/io/: __init__.py  atomic.py  text.py  ulid.py
src/dlm/lock/: __init__.py  builder.py  (+6 more)
sway/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sway/src/dlm_sway/: __init__.py  visualize.py
sway/src/dlm_sway/backends/: __init__.py  dummy.py  hf.py  mlx.py
sway/src/dlm_sway/cli/: __init__.py  app.py  commands.py
sway/src/dlm_sway/core/: __init__.py  determinism.py  errors.py  model.py  result.py  scoring.py  sections.py
sway/src/dlm_sway/integrations/: __init__.py
sway/src/dlm_sway/integrations/dlm/: __init__.py  autogen.py  resolver.py
sway/src/dlm_sway/probes/: __init__.py  _calibration_pack.py  _divergence.py  adapter_ablation.py  adapter_revert.py  base.py  calibration_drift.py  delta_kl.py  leakage.py  null_adapter.py  paraphrase_invariance.py  preference_flip.py  prompt_collapse.py  section_internalization.py  style_fingerprint.py
sway/src/dlm_sway/suite/: __init__.py  loader.py  report.py  runner.py  score.py  spec.py
sway/tests/: conftest.py
sway/tests/fixtures/: tiny_model.py
sway/tests/integration/: conftest.py  test_hf_adapter_toggle.py
sway/tests/unit/: test_backend_dummy.py  test_backend_registry.py  test_cli.py  test_determinism.py  test_divergence.py  test_dlm_bridge.py  test_errors.py  test_model.py  test_null_calibration.py  test_probe_adapter_ablation.py  test_probe_adapter_revert.py  test_probe_base.py  test_probe_calibration_drift.py  test_probe_delta_kl.py  test_probe_leakage.py  test_probe_paraphrase_invariance.py  test_probe_preference_flip.py  test_probe_prompt_collapse.py  test_probe_section_internalization.py  test_probe_style_fingerprint.py  test_result.py  test_scoring.py  test_sections.py  test_suite_runner.py  test_suite_score_report.py  test_suite_spec.py  test_visualize.py
templates/: domain-kb.dlm  personal-assistant.dlm  writing-partner.dlm
tests/: conftest.py  test_smoke.py
tests/fixtures/: __init__.py  dlm_factory.py  golden.py  hardware_mocks.py  planning.py  tiny_model.py  trained_store.py
tests/integration/: test_tiny_model_smoke.py
tests/unit/: test_cli_telemetry.py  test_fixtures_dlm_factory.py  test_fixtures_golden.py  test_fixtures_hardware_mocks.py  test_io_atomic.py  test_io_text.py  test_io_ulid.py  test_main.py  test_package_init.py  test_properties.py  test_templates_parse.py
(+627 files in other folders)
