[project]
name = "dlm"
version = "0.1.0"
description = "A text file with a .dlm extension becomes a local, trainable LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "espadonne", email = "mfwolffe@outlook.com" }]
keywords = ["llm", "lora", "fine-tuning", "ollama", "local-ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "python-ulid>=3.0",       # dlm_id generation (Sprint 13)
    "pydantic>=2.9",          # schema validation (Sprint 03+)
    "pyyaml>=6.0",            # .dlm frontmatter (Sprint 03+)
]

[project.scripts]
dlm = "dlm.cli.app:main"

[project.urls]
Homepage = "https://github.com/tenseleyFlow/DocumentLanguageModel"
Issues = "https://github.com/tenseleyFlow/DocumentLanguageModel/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
    # Fixture infrastructure (Sprint 02). Promoted to runtime deps in Sprint 06.
    "torch>=2.4",
    "transformers>=4.45",
    "huggingface-hub>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlm"]

# -------- ruff --------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "N",    # pep8-naming
    "C4",   # comprehensions
    "SIM",  # simplify
    "PT",   # pytest
    "RET",  # return
    "ARG",  # unused args
    "PTH",  # use pathlib
    "TID",  # tidy imports
]
ignore = [
    "E501",  # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PT011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------- mypy --------
[tool.mypy]
strict = true
python_version = "3.11"
packages = ["dlm"]
mypy_path = "src"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# -------- pytest --------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-m", "not slow and not gpu and not online",
]
markers = [
    "slow: expensive; deselected by default",
    "gpu: requires CUDA; skipped on CPU/MPS runners",
    "online: touches the network; skipped in offline CI",
]
