[project]
name = "dlm-sway"
version = "0.1.0.dev0"
description = "Differential testing for fine-tuned causal LMs: did LoRA/QLoRA training actually change behavior, or is the model defaulting to the pretrained base?"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Matt Wolffe", email = "mfwolffe@outlook.com" }]
keywords = [
    "lora",
    "qlora",
    "peft",
    "fine-tuning",
    "evaluation",
    "llm",
    "differential-testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core deps: spec loading, orchestration, reporting. No torch — a user
# who only defines specs or writes a custom backend shouldn't pull 3 GB
# of CUDA wheels.
dependencies = [
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "packaging>=24.0",
]

[project.optional-dependencies]
# HuggingFace + PEFT scoring backend. The canonical path.
hf = [
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
    "safetensors>=0.4",
]
# Apple Silicon inference. Env markers keep `uv sync --extra mlx` a no-op
# on non-Apple hosts so Linux/CUDA contributors' wheel resolution stays
# sane.
mlx = [
    "mlx>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.19; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
# Stylistic fingerprinting (C1). spaCy models pull at runtime via
# `python -m spacy download`.
style = [
    "spacy>=3.7",
    "textstat>=0.7",
    "nlpaug>=1.1",
]
# Semantic similarity (A2). MiniLM ~80 MB, CPU-friendly.
semsim = [
    "sentence-transformers>=3.0",
]
# Optional .dlm integration. Only imported inside dlm_sway.integrations.dlm.
dlm = [
    "dlm>=0.9",
]
# Visualization (P9).
viz = [
    "matplotlib>=3.8",
]
all = [
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
    "safetensors>=0.4",
    "mlx>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.19; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "spacy>=3.7",
    "textstat>=0.7",
    "nlpaug>=1.1",
    "sentence-transformers>=3.0",
    "matplotlib>=3.8",
]

[project.scripts]
dlm-sway = "dlm_sway.cli.app:main"

[project.urls]
Homepage = "https://github.com/tenseleyFlow/DocumentLanguageModel"
Issues = "https://github.com/tenseleyFlow/DocumentLanguageModel/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
    "hypothesis>=6.152.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlm_sway"]

# -------- ruff --------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "N",    # pep8-naming
    "C4",   # comprehensions
    "SIM",  # simplify
    "PT",   # pytest
    "RET",  # return
    "ARG",  # unused args
    "PTH",  # use pathlib
    "TID",  # tidy imports
]
ignore = [
    "E501",  # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PT011", "SIM117"]
# PyTorch's canonical `import torch.nn.functional as F` is universally
# read, so we allow the naming exception in the HF backend only.
"src/dlm_sway/backends/hf.py" = ["N812"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Hard architectural boundary: the `dlm` package is only importable
# from inside the optional integration shim. This keeps dlm-sway
# usable for anyone with just a HuggingFace base + PEFT adapter.
"dlm".msg = "Import `dlm` only from dlm_sway.integrations.dlm (the optional extra)."

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------- mypy --------
[tool.mypy]
strict = true
python_version = "3.11"
packages = ["dlm_sway"]
mypy_path = "src"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Stubless ML ecosystem packages. Narrow boundaries in backends/* import
# them explicitly; the rest of the codebase stays strict.
[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
    "transformers.*",
    "peft.*",
    "safetensors.*",
    "mlx.*",
    "mlx_lm.*",
    "sentence_transformers.*",
    "spacy.*",
    "textstat.*",
    "nlpaug.*",
    "huggingface_hub.*",
    "dlm.*",
]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

# -------- pytest --------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-m", "not slow and not gpu and not online",
]
markers = [
    "slow: expensive; deselected by default",
    "gpu: requires CUDA; skipped on CPU/MPS runners",
    "online: touches the network; skipped in offline CI",
]
